scanner_engine/scan_input/scan_4_20251101_135305/python_v1/test/test_trigger_public_network_access.tf
resource "aws_security_group" "public_sg" {
  name        = "public_sg"
  description = "Security group with public ingress"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
